Package: aroma.core
===================

Version: 2.5.8 [2012-08-21]
o ROBUSTNESS: Now the package startup message is outputted at the
  very end.  Previously it was done before some additional setup,
  which could potentially fail.


Version: 2.5.7 [2012-08-08]
o ROBUSTNESS: Added 'preprocessCore' as a suggested package, because
  some of the internal functions rely on that package.  This was never
  an issue, because those functions were called by wrapper functions
  in aroma.affymetrix that assert that the package is indeed loaded.


Version: 2.5.6 [2012-07-21]
o Added exportAromaUnitPscnBinarySet() for AromaUnitTotalCnBinarySet.
o Added alpha versions of classes AromaUnitPscnBinary(File|Set).
o Added getNumberOfFilesAveraged() to AromaUnitSignalBinaryFile.
  Formely only for AromaUnitTotalCnBinaryFile.


Version: 2.5.5 [2012-07-17]
o Updated package dependencies.


Version: 2.5.4 [2012-07-10]
o Now package imports R.devices, because it uses some of its
  device drivers that previously were in R.utils.


Version: 2.5.3 [2012-06-18]
o FIX: Fixed a typo in an error message generated by byChipType()
  for several annotation data file classes.


Version: 2.5.2 [2012-05-30]
o Updated package dependencies.
o Added argument 'calculateRatios' to CopyNumberChromosomalModel().


Version: 2.5.1 [2012-04-16]
o CLEANUP: Package now only depends/imports on CRAN package, which 
  simplifies the installation of aroma.core, and indirectly any
  packages that depends on it.  Note, there are still "suggested"
  non-CRAN packages, which are required by some/optional methods.
o CLEANUP: Package no longer depends on aroma.light, but instead it
  "suggests" it.  This is possible, because now weightedMad() of
  aroma.light has been added to matrixStats v0.5.0.
o CLEANUP: Package no longer "Suggests" affxparser.  It was needed because
  of the findFiles() function, which has been added to R.utils v1.13.1.


Version: 2.5.0 [2012-03-25]
o Submitted to CRAN.